--- a/.github/workflows/cli-build.yml
+++ b/.github/workflows/cli-build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build HomeKit CLI
 
 on:
     push:
@@ -7,6 +7,10 @@ on:
     pull_request:
         branches:
             - main
+
+defaults:
+    run:
+        working-directory: homekit-cli
 
 jobs:
     test:
