--- a/.github/workflows/cli-release.yml
+++ b/.github/workflows/cli-release.yml
@@ -10,6 +10,10 @@ on:
         description: "The version to release (e.g. v1.0.0)"
         required: true
 
+defaults:
+    run:
+        working-directory: homekit-cli
+
 jobs:
   release:
     runs-on: ubuntu-latest
