Enhance asset management and workspace command structure
- Updated asset embedding to include all files in the CLI.
- Modified workspace command to improve naming consistency and simplify command structure.
- Adjusted README and Docker Compose files for better clarity and consistency.
- Refactored runtime configuration loading for improved error handling.

--- a/homekit-cli/assets/workspaces/compose.dev.yml
+++ b/homekit-cli/assets/workspaces/compose.dev.yml
@@ -1,7 +1,7 @@
 services:
-  {{ .name }}:
-    image: garethcxy/hk-dev:{{ .type }}
-    container_name: {{ .name }}-dev
+  {{ .Name }}:
+    image: garethcxy/hk-dev:{{ .Type }}
+    container_name: {{ .Name }}-dev
     volumes:
       - ./code:/root/code
     tty: true
