--- a/.github/workflows/cli-release.yml
+++ b/.github/workflows/cli-release.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: dockerhub.com
+          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
