--- a/.github/workflows/cli-release.yml
+++ b/.github/workflows/cli-release.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: dist/*
+          files: homekit-cli/dist/*
           generate_release_notes: true
           draft: false
           prerelease: false
